Fix struct move

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Antoni Boucher <bouanto@zoho.com>"]
 
 [dependencies]
-rlvm = { git = "ssh://git@framagit.org:/antoyo/rlvm.git" } # "0.0.2"
+#rlvm = { git = "ssh://git@framagit.org:/antoyo/rlvm.git" } # "0.0.2"
+rlvm = { path = "/home/bouanto/Ordinateur/Programmation/Rust/Projets/rlvm" }
 
 [lib]
 name = "runtime"
