--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Antoni Boucher <bouanto@zoho.com>"]
 
 [dependencies]
-rlvm = { git = "ssh://git@framagit.org:/antoyo/rlvm.git" } # "0.0.2"
+rlvm = { git = "https://github.com/antoyo/rlvm" } # "0.0.2"
 
 [lib]
 name = "runtime"
